# baby-cry-classifier

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yml  example.env  pyproject.toml  todo.md
k8s/: orchestrator-deployment.yml  predictor-deployment.yml  preprocessor-deployment.yml  services.yml
notebooks/: 01-eda.py  02-preprocessing.ipynb  02-preprocessing.py  03-training.ipynb  03-training.py  03-training_v2.py
src/baby_cry_classifier/: __init__.py  config.py  data.py  evaluate.py  models.py  predict.py  serve.py  train.py
