[project]
name = "baby-cry-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David M.", email = "10966271+jhumigas@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "fastapi[standard]>=0.128.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "httpx>=0.28.0",
    "joblib>=1.4.0",
]

[project.scripts]
baby-cry-classifier = "baby_cry_classifier:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "ipython>=9.9.0",
    "marimo>=0.19.4",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "safety>=3.7.0",
]
lab = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "jupyterlab>=4.5.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "torch-vggish-yamnet>=0.2.1",
    "torchcodec>=0.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]

[tool.marimo.runtime]
dotenv = [".env"]
